--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,11 @@
                 <a href="/users/login">sign in</a>
             {% endif %}
         </div>
-        <a href="/">webnodes</a>
+        <a href="/">home</a>
+        {% if group %}
+            <span>‣</span>
+            <a href="/{{ group }}">{{ group }}</a>
+        {% endif %}
     </div>
     <div id="content">
         {% block content %}{% endblock %}
