Adding voting html.

--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -89,6 +89,7 @@ input, textarea {
 
 /* generic styles */
 .box {
+    position: relative;
     background-color: #FFFFFF;
     padding: 0.8em;
     border: 8px solid #A7B6BF;
