--- a/templates/topic.html
+++ b/templates/topic.html
@@ -157,7 +157,12 @@
     {% for comment in comments %}
         <div id="{{ comment.id }}" class="container">
             <div class="comment box">
-                <div class="body">{{ comment.body|markdownify }}</div>
+                <div style="position:absolute;top:10px;right:40px;visibility:hidden">
+                    up / down
+                </div>
+                <div class="body">
+                    {{ comment.body|markdownify }}
+                </div>
                 <span style="float: right">
                     {{ comment.points }} points,
                     {% ifequal group 'reddit' %}
