--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -50,7 +50,7 @@ h3                      { font-size: 1em;  }
 h4                      { font-size: 0.875em; }
                         
 a                       { color: #2D7BB2; text-decoration: none; outline: none; }
-a:hover                 { color: #2B332E; }
+a:hover                 { color: white; background-color: #2D7BB2; }
 a:visited {
     color:#666666;
 }
