Added yahoo BOSS search for forums.

--- a/templates/topic.html
+++ b/templates/topic.html
@@ -3,7 +3,7 @@
 {% load tag_extras %}
 
 {% block title %}
-    <title>{{ forum }} | {{ topic.title }}</title>
+    <title>{{ topic.title }} | {{ forum }}</title>
 {% endblock %}
 
 {% block style %}
