--- a/templates/basic_form.html
+++ b/templates/basic_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-
-{% block script %}
+{% block title %}
+    <title>{{title}}</title>
 {% endblock %}
 
 {% block style %}
