--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,34 @@
     <![endif]-->
     {% block style %}{% endblock %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            if (!$('#username').val()) {
+                $('#username').val('username');
+            }
+            
+            if (!$('#password').val()) {
+                $('#password').val('examplepassword');
+            }
+            
+            $('#username').one('focus', function(){
+                if (this.value == 'username'){
+                    this.value = '';
+                }
+            });
+            
+            $('#password').one('focus', function(){
+                if (this.value == 'examplepassword'){
+                    this.value = '';
+                }
+            });
+            
+            $('#next').val(window.location.pathname);
+            if ($('#logout').length) {
+                $('#logout')[0].href += '?next=' + window.location.pathname;
+            }
+        });
+    </script>
     {% block script %}{% endblock %}
 </head>
 
@@ -23,9 +51,14 @@
             {% if user.is_authenticated %}
                 <a href="/users/{{user.username}}">{{ user.username }}</a>
                 |
-                <a href="/users/logout">sign out</a>
+                <a id="logout" href="/users/logout">sign out</a>
             {% else %}
-                <a href="/users/login">sign in</a>
+                <form method="post" action="/users/login" style="font-size: 0.8em;">
+                    <input type="text" id="username" maxlength="30" name="username" style="width:150px">
+                    <input type="password" id="password" name="password" style="width:150px">
+                    <input type="hidden" id="next" value="/" name="next">
+                    <input type="submit" value="sign in / sign up" name="submit">
+                </form>
             {% endif %}
         </div>
         <a href="/">home</a>
